# shadowsocks-chromeos

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  package.json  rollup.config.js
src/: main.ts  manifest.ts
